# production-manager-app

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Contractor_Apps_Product_Descriptions.txt  DOCUMENTATION.txt  FAQ.md  GUMROAD_ACTIVATION.md  GitHub Release Document.md  InstallerScript.iss  LICENSE.md  LICENSE.txt  Pricing & Company Size Structure.md  Private-Network SaaS Architecture Instructions.md  README.txt  image_convert.py  requirements.txt  update.bat  update_installer.py  version_info.json
app/: Admin_Interface.py  Automating_Innovating_AI_Production_Manager_App.py  CSV_File.py  CSV_View.py  Installer_Interface.py  Production_Manager_App.py  admin_license_activation.py  alert_checks.py  app_controller.py  builders_db.py  builders_info.py  create_additional_db_table.py  create_db_table.py  csv_upload.py  daily_schedule.py  dashboard_return.py  database.py  db_connection.py  employee_interface.py  entry_point.py  installer_activation.py  installer_db.py  installer_info.py  installer_login.py  license_storage.py  license_validator.py  main.py  material_info.py  material_info_db.py  password_reset.py  path_utils.py  pay_week_schedule.py  reports_window.py  schema_manager.py  session_context.py  sql_connection_page.py  sql_server_connection_page.py  startup_page.py  sync_subscription.py  terms_conditions.py  (+10 more)
